[gd_scene load_steps=5 format=2]

[ext_resource path="res://res/Theme_UI.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/MAIN_SCREEN.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://res/COOPBL.TTF"

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.0
margin_top = 80.0
margin_right = 91.0
margin_bottom = 154.0
theme = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0.0509804, 0.215686, 0.960784, 1 )
text = "CHESS"

[node name="PVP" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -88.0
margin_right = -30.0
margin_bottom = -14.0
text = "P v P"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PVE" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -88.0
margin_right = 218.0
margin_bottom = -14.0
text = "P v E"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RULES" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = 16.0
margin_right = 90.0
margin_bottom = 90.0
text = "RULES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = 128.0
margin_right = 90.0
margin_bottom = 202.0
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rules" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect2" type="ColorRect" parent="rules"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="rules"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_top = 8.0
margin_right = 144.0
margin_bottom = 82.0
theme = ExtResource( 1 )
text = "-: RULES :-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="rules"]
margin_left = 56.0
margin_top = 88.0
margin_right = 476.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "1. IF YOU DON'T KNOW THE RULES OF CHESS THEN JUST GOOGLE IT BECAUSE I AM NOT MASTER IN TEACHING. "
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="rules"]
margin_left = 56.0
margin_top = 136.0
margin_right = 476.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 2 )
text = "2. IN THIS GAME STRICT PLAY IS CONSIDERED SO IF YOU CLICKS ONE PAWN YOU HAVE TO MOVE IT SO THINK BEFORE YOU CLICK."
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="rules"]
margin_left = 56.0
margin_top = 200.0
margin_right = 476.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 2 )
text = "3. I AM VERY LAZY AND NOT SO SMART PERSON SO I HAVE NOT IMPLEMENTED ANY TYPE OF CASTLING FEATURE SO DON'T TRY IT."
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="rules"]
margin_left = 56.0
margin_top = 392.0
margin_right = 476.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 2 )
text = "IF YOU HAVE ANY PROBLEM WITH THE GAME OR ME JUST CONTACT ME DIRECTLY.
phoenixcreation2.herokuapp.com"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="rules"]
margin_left = 56.0
margin_top = 480.0
margin_right = 476.0
margin_bottom = 536.0
custom_fonts/font = SubResource( 2 )
text = "PRESS ANY KEY TO GO BACK TO MAIN SCREEN"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PVP" to="." method="_on_PVP_pressed"]
[connection signal="pressed" from="PVE" to="." method="_on_PVE_pressed"]
[connection signal="pressed" from="RULES" to="." method="_on_RULES_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
